'coupon_dashboardbase_added'

--- a/templates/admin/adminoffer.html
+++ b/templates/admin/adminoffer.html
@@ -6,7 +6,7 @@
 
 
 
-<!--Add Brand  Modal -->
+<!--Add offer  Modal -->
 <div class="modal fade" id="addCategory" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
