--- a/templates/user/checkout.html
+++ b/templates/user/checkout.html
@@ -463,76 +463,76 @@
                     });
                 } 
                   
-                  else if (paymentMethod === "razorpay") {
-                      // The Razorpay code from the second script goes here
-                      $.ajax({
-                        method:"GET",
-                        url:"{% url 'razarypaycheck' %}",
-                        success: function(response) {
-                         var options = {
-                           "key": "rzp_test_mMbA6UvMUpGXUl", // Enter the Key ID generated from the Dashboard
-                           "amount": response.total_price*100,// Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
-                           //"amount": 1*100,//response.total_price * 100, // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
-                           "currency": "INR",
-                           "name": "COOT",
-                           "description": "Thank you for buying with us",
-                           "image": "https://example.com/your_logo",
-                           //"order_id": "order_IluGWxBm9U8zJ8", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
-                           "handler": function (responseb){
-                            // alert(responseb.razorpay_payment_id);
-                               data = {
-                                 
-                                 "payment_method" : "razorpay",
-                                 "payment_id" : responseb.razorpay_payment_id,
-                                 "address": selectedAddress,
-                                 csrfmiddlewaretoken: token
-                                 
-                               }
-    
-                                 $.ajax({
-                                   method:"POST",
-                                   url:"{% url 'placeorder' %}",
-                                   data: data,
-                                   success: function (responsec) {
-                                     
-                                     Swal.fire("Congratulations!", responsec.status,"success" ).then((value) => {
-                                        
-                                     });
-                                     window.location.href = '/'
-                                   }
-             
-                               });
-                           },
-                           "prefill": {
-                               "name": fname,
-                               "email" : email,
-                               'contact' : phone,
-                           },
-                           
-                           "theme": {
-                               "color": "#3399cc"
-                           }
-                       };
-                       var rzp1 = new Razorpay(options);
-                       rzp1.on('payment.failed', function (response){
-                               alert(response.error.code);
-                               alert(response.error.description);
-                               alert(response.error.source);
-                               alert(response.error.step);
-                               alert(response.error.reason);
-                               alert(response.error.metadata.order_id);
-                               alert(response.error.metadata.payment_id);
-                       });
-                       rzp1.open();
-                         console.log(responsec);
-             
-                        }
+                else if (paymentMethod === "razorpay") {
+                    // The Razorpay code from the second script goes here
+                    $.ajax({
+                      method:"GET",
+                      url:"{% url 'razarypaycheck' %}",
+                      success: function(response) {
+                       var options = {
+                         "key": "rzp_test_6M76xdgpXrFgY7", // Enter the Key ID generated from the Dashboard
+                         "amount": response.total_price*100,// Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+                         //"amount": 1*100,//response.total_price * 100, // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+                         "currency": "INR",
+                         "name": "FLEX",
+                         "description": "Thank you for buying with us",
+                         "image": "https://example.com/your_logo",
+                         //"order_id": "order_IluGWxBm9U8zJ8", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+                         "handler": function (responseb){
+                          // alert(responseb.razorpay_payment_id);
+                             data = {
+                               
+                               "payment_method" : "razorpay",
+                               "payment_id" : responseb.razorpay_payment_id,
+                               "address": selectedAddress,
+                               csrfmiddlewaretoken: token
+                               
+                             }
+  
+                               $.ajax({
+                                 method:"POST",
+                                 url:"{% url 'placeorder' %}",
+                                 data: data,
+                                 success: function (responsec) {
+                                   
+                                   Swal.fire("Congratulations!", responsec.status,"success" ).then((value) => {
+                                      
+                                   });
+                                   window.location.href = '/'
+                                 }
+           
+                             });
+                         },
+                         "prefill": {
+                             "name": fname,
+                             "email" : email,
+                             'contact' : phone,
+                         },
+                         
+                         "theme": {
+                             "color": "#3399cc"
+                         }
+                     };
+                     var rzp1 = new Razorpay(options);
+                     rzp1.on('payment.failed', function (response){
+                             alert(response.error.code);
+                             alert(response.error.description);
+                             alert(response.error.source);
+                             alert(response.error.step);
+                             alert(response.error.reason);
+                             alert(response.error.metadata.order_id);
+                             alert(response.error.metadata.payment_id);
                      });
-                  } 
-              }
-          });
-      });
-    </script>  
+                     rzp1.open();
+                       console.log(responsec);
+           
+                      }
+                   });
+                } 
+            }
+        });
+    });
+  </script>    
 </main><!-- End .main -->
 
 {% endblock %}
