--- a/templates/user/userprofile/orderviewuser.html
+++ b/templates/user/userprofile/orderviewuser.html
@@ -182,7 +182,7 @@
                                 <th scope="col"></th>
                                 {% for i in products %}
                                 {% if i.orderitem_status.item_status == 'Delivered' %}
-                                {% comment %} <th scope="col">Add Your Review</th> {% endcomment %}
+                                <th scope="col">Add Your Review</th>
                                 {% endif %}
 
                                 {% endfor %}
@@ -365,7 +365,7 @@
                                                         <span aria-hidden="true"><i class="icon-close"></i></span>
                                                     </button>
                                     
-                                                    {% comment %} <div class="form-box">
+                                                    <div class="form-box">
                                                         <div class="form-tab">
                                                             <ul class="nav nav-pills nav-fill" role="tablist">
                                                                 <li class="nav-item">
@@ -416,7 +416,7 @@
                                                                 </div><!-- .End .tab-pane -->
                                                             </div><!-- End .tab-content -->
                                                         </div><!-- End .form-tab -->
-                                                    </div><!-- End .form-box --> {% endcomment %}
+                                                    </div><!-- End .form-box --> 
                                                 </div><!-- End .modal-body -->
                                             </div><!-- End .modal-content -->
                                         </div><!-- End .modal-dialog -->
