--- a/templates/user/home/index.html
+++ b/templates/user/home/index.html
@@ -260,9 +260,12 @@
 
                                                 <div class="product-action-vertical">
                                                     
-                                                    <a href="" class="btn-product-icon btn-cart btn-expandable addcart"  data-product_id="{{c.variant.id}}"><span>add to cart</span></a>
+                                                    {% comment %} <a href="" class="btn-product-icon btn-cart btn-expandable addcart"  data-product_id="{{c.variant.id}}"><span>add to cart</span></a> {% endcomment %}
+                                                    <a href="{% url 'productshow' c.variant.product.id c.variant.id %}" class="btn-product-icon btn-cart btn-expandable " > <span>add to cart</span></a>
 
-                                                    <a href="" class="btn-product-icon btn-wishlist btn-expandable wish-list wishlistshamnad"  data-product_id="{{c.variant.id}}"><span>add to wishlist</span></a>
+
+                                                    <a href="" class="btn-product-icon btn-wishlist btn-expandable wish-list wishlistshamnad"  data-product_id="{{c.variant.id}}"><span>add to wishlist</span></a> 
+
 
                                                 </div><!-- End .product-action-vertical -->
                                             </figure><!-- End .product-media -->
@@ -274,9 +277,7 @@
                                             </div><!-- End .product-cat -->
                                             <h3 class="product-title"><a href="{% url 'productshow' c.variant.product.id c.variant.id %}">{{c.variant.product.product_name}}</a></h3><!-- End .product-title -->
                                             
-                                            {% comment %} <div class="product-price">
-                                                <span class="new-price">${{c.variant.product.product_price}}</span>
-                                            </div><!-- End .product-price --> {% endcomment %}
+                                          
 
                                             <div class="product-price">
                                                 {% if c.variant.product.category.offer %}
