--- a/templates/user/product/productshow.html
+++ b/templates/user/product/productshow.html
@@ -84,12 +84,34 @@ justify-content: center;
                         <div class="product-details product-details-centered">
                             <h1 class="product-title">{{ variant.0.variant.product.product_name }}</h1><!-- End .product-title -->
 
-                            {% comment %} <div class="ratings-container">
+                            <div class="ratings-container">
                                 <div class="ratings">
+                                    {% if average_rating %}
+                                    {% if average_rating == 5 %}
+                                    <div class="ratings-val" style="width: 100%;"></div><!-- End .ratings-val -->
+                                    {% elif average_rating == 4 %}
                                     <div class="ratings-val" style="width: 80%;"></div><!-- End .ratings-val -->
+                                    {% elif average_rating == 3 %}
+
+                                    <div class="ratings-val" style="width: 60%;"></div><!-- End .ratings-val -->
+                                    {% elif average_rating == 2 %}
+
+                                    <div class="ratings-val" style="width: 40%;"></div><!-- End .ratings-val -->
+                                    {% elif average_rating == 1 %}
+
+                                    <div class="ratings-val" style="width: 20%;"></div><!-- End .ratings-val -->
+                                    {% else %}
+
+                                    {% endif %}
+                                    {% endif %}
                                 </div><!-- End .ratings -->
-                                <a class="ratings-text" href="#product-review-link" id="review-link">( 2 Reviews )</a>
-                            </div><!-- End .rating-container --> {% endcomment %}
+                                {% if rev_count %}
+                                <a class="ratings-text" href="#" id="review-link">( {{ rev_count}} Reviews )</a>
+                                {% else %}
+                                <a class="ratings-text" href="#" id="review-link">( No Reviews )</a>
+
+                                {% endif %}
+                            </div><!-- End .rating-container --> 
 
                             
 
@@ -168,6 +190,108 @@ justify-content: center;
                 </div><!-- End .row -->
             </div><!-- End .product-details-top -->
          
+
+
+
+            <div class="product-details-tab">
+                <ul class="nav nav-pills justify-content-center" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="product-desc-link" data-toggle="tab" href="#product-desc-tab" role="tab" aria-controls="product-desc-tab" aria-selected="true">Description</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="product-info-link" data-toggle="tab" href="#product-info-tab" role="tab" aria-controls="product-info-tab" aria-selected="false">Additional information</a>
+                    </li>
+        
+                    {% if rev_count %}
+                        <li class="nav-item">
+                            <a class="nav-link" id="product-review-link" data-toggle="tab" href="#product-review-tab" role="tab" aria-controls="product-review-tab" aria-selected="false">Reviews({{ rev_count }}) </a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" id="product-review-link" data-toggle="tab" href="#product-review-tab" role="tab" aria-controls="product-review-tab" aria-selected="false">Reviews </a>
+                        </li>
+                    {% endif %}
+                </ul>
+                <div class="tab-content">
+                    <div class="tab-pane fade show active" id="product-desc-tab" role="tabpanel" aria-labelledby="product-desc-link">
+                        <div class="product-desc-content">
+                            <h3>Product Information</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna viverra non, semper suscipit, posuere a, pede. Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis. Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique cursus. </p>
+                            <ul>
+                                <li>Nunc nec porttitor turpis. In eu risus enim. In vitae mollis elit. </li>
+                                <li>Vivamus finibus vel mauris ut vehicula.</li>
+                                <li>Nullam a magna porttitor, dictum risus nec, faucibus sapien.</li>
+                            </ul>
+
+                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna viverra non, semper suscipit, posuere a, pede. Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis. Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique cursus. </p>
+                        </div><!-- End .product-desc-content -->
+                    </div><!-- .End .tab-pane -->
+                    <div class="tab-pane fade" id="product-info-tab" role="tabpanel" aria-labelledby="product-info-link">
+                        <div class="product-desc-content">
+                            <h3>Information</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna viverra non, semper suscipit, posuere a, pede. Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. </p>
+
+                            <h3>Fabric & care</h3>
+                            <ul>
+                                <li>Faux suede fabric</li>
+                                <li>Gold tone metal hoop handles.</li>
+                                <li>RI branding</li>
+                                <li>Snake print trim interior </li>
+                                <li>Adjustable cross body strap</li>
+                                <li> Height: 31cm; Width: 32cm; Depth: 12cm; Handle Drop: 61cm</li>
+                            </ul>
+
+                            <h3>Size</h3>
+                            <p>one size</p>
+                        </div><!-- End .product-desc-content -->
+                    </div><!-- .End .tab-pane -->
+
+                    <div class="tab-pane fade" id="product-review-tab" role="tabpanel" aria-labelledby="product-review-link">
+                        <div class="reviews">
+                            <h3>Reviews</h3>
+                            {% for i in reviews %}
+                            <div class="review">
+                                <div class="row no-gutters">
+                                    <div class="col-auto">
+                                        <h4><a href="#">{{ i.name }}</a></h4>
+                                        <div class="ratings-container">
+                                            <div class="ratings">
+                                                {% if i.rating == 5 %}
+                                                <div class="ratings-val" style="width: 100%;"></div><!-- End .ratings-val -->
+                                                {% elif i.rating == 4 %}
+                                                <div class="ratings-val" style="width: 80%;"></div><!-- End .ratings-val -->
+                                                {% elif i.rating == 3 %}
+                                                <div class="ratings-val" style="width: 60%;"></div><!-- End .ratings-val -->
+                                                {% elif i.rating == 2 %}
+                                                <div class="ratings-val" style="width: 40%;"></div><!-- End .ratings-val -->
+                                                {% elif i.rating == 1 %}
+                                                <div class="ratings-val" style="width: 20%;"></div><!-- End .ratings-val -->
+                                                {% else %}
+        
+                                                {% endif %}
+                                            </div><!-- End .ratings -->
+                                        </div><!-- End .rating-container -->
+                                    </div><!-- End .col -->
+                                    <div class="col">
+                                        <h4>{{ i.email }}</h4>
+        
+                                        <div class="review-content">
+                                            <p> {{ i.review_text }}</p>
+                                        </div><!-- End .review-content -->
+        
+                                    </div><!-- End .col-auto -->
+                                </div><!-- End .row -->
+                            </div><!-- End .review -->
+                            {% endfor %}
+                        </div><!-- End .reviews -->
+                    </div><!-- .End .tab-pane -->
+                </div><!-- End .tab-content -->
+            </div><!-- End .product-details-tab -->
+        </div>       
+
+
+
+
 
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
