--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -1,5 +1,5 @@
 {% extends 'admin/dashboardbase.html' %}
-{% load static %}
+{% comment %} {% load static %} {% endcomment %}
 {% block title %}dashboard{% endblock %}
 {% block body %}
 
